# eletromag

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
application/: CMakeLists.txt  TODO.txt  notes.txt
application/resources/: shader.wgsl
application/src/: app.cpp  app.h  application.cpp  application.h  arrow.h  camera.cpp  camera.h  component.h  definitions.h  eletron.h  field.h  glfw3webgpu.h  imgui-layer.cpp  imgui-layer.h  index.html  layer-stack.cpp  layer-stack.h  layer.cpp  layer.h  main.cpp  mesh.h  object.cpp  object.h  physics.cpp  physics.h  pipeline.cpp  pipeline.h  resource-manager.cpp  resource-manager.h  scene-layer.cpp  scene-layer.h  scene.cpp  scene.h  script.js  style.css  topico1-gui.cpp  topico1-gui.h  topico1-physics.cpp  topico1-physics.h  topico1-scene.cpp  (+22 more)
application/src/pages/: index.html
application/src/shaders/: vertex.wgsl
application/src/utils/: resource-manager.cpp  resource-manager.h  webgpu-utils.cpp
